tests/build/cases/widget_new/missing_value4.stderr
error: expected `;`
 --> cases/widget_new/missing_value4.rs:8:9
  |
8 |         margin = 0;
  |         ^^^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value4.rs:6:9
   |
5  |       let _ = Wgt! {
   |  _____________-
6  | |         cursor =
   | |         ^^^^^^
7  | |         // we expect these properties to be used.
8  | |         margin = 0;
9  | |         enabled = true;
10 | |     };
   | |_____- an argument is missing
   |
note: method defined here
  --> $WORKSPACE/zero-ui/src/properties/mouse.rs
   |
   | pub fn cursor(child: impl UiNode, cursor: impl IntoVar<Option<CursorIcon>>) -> impl UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/zero-ui/src/widgets.rs
   |
   | cursor(/* cursor */)
   |
